css of index completed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>HTML CSS Capstone Project</title>
 </head>
 <body>
@@ -20,21 +21,27 @@
     <h1>Quelle forme a une entité ?</h1>
     <section>
         <h2>Alors une entité n'a vraiment aucune forme ?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, alias cupiditate, est placeat sed quos animi quasi similique laudantium, ipsam tempora! Laborum voluptates maiores magni harum, sint eos. Itaque, aut?
-        Quas quibusdam, laborum iusto porro facilis sed cumque deleniti optio corporis nobis culpa natus quidem, voluptatibus, placeat sit. Accusantium, quos? Id sit ipsum dolorem corrupti aliquid voluptatum enim, nobis repellendus?
+        <p>Pas tout à fait, en réalité elle a bien une « forme », littéralement. Une entité, nous l’avons dit dans ce post et dans d’autres auparavant, est un amalgame d’énergie retenu par une charge, qui fonctionne un peu à la manière d’une bouteille qui contiendrait de l’eau (énergie). Paradoxalement, le simple fait de rester sous forme d’amalgame représente déjà une contrainte permanente pour l’énergie, aussi, afin de minimiser la contrainte, la nature semble avoir pris le parti de la simplicité et c’est dans la forme la plus simple présente dans la nature que l’énergie se concentre :
        </p>
     </section>
     <section>
-        <h2>Alors une entité n'a vraiment aucune forme ?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, alias cupiditate, est placeat sed quos animi quasi similique laudantium, ipsam tempora! Laborum voluptates maiores magni harum, sint eos. Itaque, aut?
-        Quas quibusdam, laborum iusto porro facilis sed cumque deleniti optio corporis nobis culpa natus quidem, voluptatibus, placeat sit. Accusantium, quos? Id sit ipsum dolorem corrupti aliquid voluptatum enim, nobis repellendus?
-       </p>
+        <h2>Oui mais pourtant quand on a pris des photos et qu’un esprit apparaît, il a bien une forme reconnaissable ?
+
+        </h2>
+        <p>Hé oui, la véritable forme d’une entité n’est autre qu’une simple sphère, comme l’eau en apesanteur.
+
+            C’est normalement là où votre cerveau fait le lien avec de fameuses photos d’entités qui apparaissent sous forme de sphères… les fameuses « orbes ».
+            Alors bien sûr, il ne faut pas prendre pour argent comptant tout ce qu’on voit en photo hun (a fortiori sur internet…). Une bonne dose d’esprit critique ne fait jamais de mal ! 90% des photos d’ »orbes » que l’on trouve sur la toile sont en réalité de simples photos de poussière (ou de flocons de neige) en suspension révélées par les flashs des appareils photos (et je ne parle même pas des explications qui vont avec… -_-’ ) .
+       </p><br>
+       <img src="" alt="une image en dit plus">
+       <p>Mais pas toujours, et quand ces photos sont vraies et montrent bien des entités, elles révèlent leur vraie « forme », qui n’en est pas tout à fait une non plus (puisqu’une entité n’est pas matérielle). Enfin vous voyez l’idée quoi.</p><br>
+       <p>Dans les faits, la sphère est rarement parfaitement « sphérique ». Il arrive qu’elle soit plus ou moins difforme (temporairement ou en permanence), parfois un peu étirée et ressemble alors plus à un oeuf (voire carrément à une petite saucisse) qu’à une boule parfaite. Mais l’idée reste là.</p>
     </section>
     <section>
-        <h2>Alors une entité n'a vraiment aucune forme ?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, alias cupiditate, est placeat sed quos animi quasi similique laudantium, ipsam tempora! Laborum voluptates maiores magni harum, sint eos. Itaque, aut?
-        Quas quibusdam, laborum iusto porro facilis sed cumque deleniti optio corporis nobis culpa natus quidem, voluptatibus, placeat sit. Accusantium, quos? Id sit ipsum dolorem corrupti aliquid voluptatum enim, nobis repellendus?
-       </p>
+        <h2>Pourquoi faire cet article au final ?</h2>
+        <p>Pour ne pas perdre de vue que ce que nous voyons n’est qu’un mirage. Ce n’est pas pour rien que les praticiens en magie disent de l’astral qu’il s’agit d’un plan d’illusions, où l’esprit modèle la forme apparente des choses. Prendre conscience que l’énergie n’a pas de forme est impératif pour ne pas se laisser berner par ce que nous voyons. Ce n’est pas parce qu’une entité se présente à vous sous la forme de Jésus Christ ou de la Vierge Marie qu’il s’agit réellement de Jésus Christ ou de la Vierge (pareil pour l’archange gabriel, saint michel, comte de saint germain etc.).</p><br>
+        <p>De la même manière, ce n’est pas parce que vous voyez un serpent géant noir avec des yeux jaunes brillants vous attaquer qu’il s’agit pour autant d’un vrai serpent géant noir aux yeux jaunes. Il ne s’agit dans un cas comme dans l’autre que d’une interaction entre l’entité, ce qu’elle renvoie, ce qu’elle veut montrer et ce que votre cerveau perçoit et crée pour se la représenter.
+            En clair, une simple illusion, ou plutôt un mirage.</p>
     </section>
 </body>
 </html>
