--- a/creations.html
+++ b/creations.html
@@ -19,12 +19,12 @@
     </nav>
     <h1>Nos réalisations</h1>
     <div class="cards">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card"><img src="https://fakeimg.pl/290/"></div>
+        <div class="card"><img src="https://fakeimg.pl/290/"></div>
+        <div class="card"><img src="https://fakeimg.pl/290/"></div>
+        <div class="card"><img src="https://fakeimg.pl/290/"></div>
+        <div class="card"><img src="https://fakeimg.pl/290/"></div>
+        <div class="card"><img src="https://fakeimg.pl/290/"></div>
     </div>
 </body>
 </html>
