--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <li><a href="creations.html">Réalisations</a></li>
         </ul>
     </nav>
-    <img src="" alt="">
     <h1>Quelle forme a une entité ?</h1>
     <section>
         <h2>Alors une entité n'a vraiment aucune forme ?</h2>
@@ -33,7 +32,7 @@
             C’est normalement là où votre cerveau fait le lien avec de fameuses photos d’entités qui apparaissent sous forme de sphères… les fameuses « orbes ».
             Alors bien sûr, il ne faut pas prendre pour argent comptant tout ce qu’on voit en photo hun (a fortiori sur internet…). Une bonne dose d’esprit critique ne fait jamais de mal ! 90% des photos d’ »orbes » que l’on trouve sur la toile sont en réalité de simples photos de poussière (ou de flocons de neige) en suspension révélées par les flashs des appareils photos (et je ne parle même pas des explications qui vont avec… -_-’ ) .
        </p><br>
-       <img src="" alt="une image en dit plus">
+       <img src="Entite.jpg" alt="une image en dit plus">
        <p>Mais pas toujours, et quand ces photos sont vraies et montrent bien des entités, elles révèlent leur vraie « forme », qui n’en est pas tout à fait une non plus (puisqu’une entité n’est pas matérielle). Enfin vous voyez l’idée quoi.</p><br>
        <p>Dans les faits, la sphère est rarement parfaitement « sphérique ». Il arrive qu’elle soit plus ou moins difforme (temporairement ou en permanence), parfois un peu étirée et ressemble alors plus à un oeuf (voire carrément à une petite saucisse) qu’à une boule parfaite. Mais l’idée reste là.</p>
     </section>
