--- a/links.html
+++ b/links.html
@@ -18,12 +18,12 @@
         </ul>
     </nav>
     <h1>Liens utiles</h1>
-    <ol class="cards">
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+    <ol class="liens-utiles">
+        <li><a href="https://www.canadainternational.gc.ca/cameroon-cameroun/index.aspx?lang=fra">Bureau des visas du Canada</a></li>
+        <li><a href="https://www.canadainternational.gc.ca/ci-ci/business_affaires/commerce-canada.aspx?lang=fra">Relations commerciales avec le Canada</a></li>
+        <li><a href="https://www.investircanada.ca/">Investir au Canada</a></li>
+        <li><a href="https://cafr-keepexploring.canada.travel/">Poursuivre vos recherches</a></li>
+        <li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Site web d'immigration, réfugiés et citoyenneté Canada</a></li>
     </ol>
 </body>
 </html>
